@@ -27,7 +27,8 @@
                     "request": {
                         "merges_per_sec": 0,
                         "per_sec": 0
-                    }
+                    },
+                    "await": 0
                 },
                 "request": {
                     "avg_size": 0
@@ -40,7 +41,8 @@
                     "request": {
                         "merges_per_sec": 0,
                         "per_sec": 0
-                    }
+                    },
+                    "await": 0
                 }
             },
             "name": "sda",
