@@ -22,6 +22,9 @@ package diskio
 import (
 	"testing"
 
+	sigar "github.com/elastic/gosigar"
+
+	"github.com/shirou/gopsutil/disk"
 	"github.com/stretchr/testify/assert"
 
 	mbtest "github.com/elastic/beats/metricbeat/mb/testing"
@@ -80,4 +83,43 @@ func TestDataEmptyFilter(t *testing.T) {
 	data, err := f.Fetch()
 	assert.NoError(t, err)
 	assert.Equal(t, 10, len(data))
+}
+
+func TestDiskIOStat_CalIOStatistics(t *testing.T) {
+	counter := disk.IOCountersStat{
+		ReadCount:  13,
+		WriteCount: 17,
+		ReadTime:   19,
+		WriteTime:  23,
+		Name:       "iostat",
+	}
+
+	stat := &DiskIOStat{
+		lastDiskIOCounters: map[string]disk.IOCountersStat{
+			"iostat": disk.IOCountersStat{
+				ReadCount:  3,
+				WriteCount: 5,
+				ReadTime:   7,
+				WriteTime:  11,
+				Name:       "iostat",
+			},
+		},
+		lastCpu: sigar.Cpu{Idle: 100},
+		curCpu:  sigar.Cpu{Idle: 1},
+	}
+
+	expected := DiskIOMetric{
+		AvgAwaitTime:      24.0 / 22.0,
+		AvgReadAwaitTime:  1.2,
+		AvgWriteAwaitTime: 1,
+	}
+
+	got, err := stat.CalIOStatistics(counter)
+	if err != nil {
+		t.Fatal(err)
+	}
+
+	assert.Equal(t, expected.AvgAwaitTime, got.AvgAwaitTime)
+	assert.Equal(t, expected.AvgReadAwaitTime, got.AvgReadAwaitTime)
+	assert.Equal(t, expected.AvgWriteAwaitTime, got.AvgWriteAwaitTime)
 }
